# DX12Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/Core/: Application.h
src/: CMakeLists.txt  DX12Renderer.cpp  DX12Renderer.h  DX12Renderer.rc  Resource.h  main.cpp  pch.h
src/Core/: Application.cpp  Application.h  RHI.cpp  RHI.h
src/Utility/: Assert.h  Log.cpp  Log.h  Timer.cpp  Timer.h  TypeDefs.h
